--- a/mods/ra/rules/vehicles.yaml
+++ b/mods/ra/rules/vehicles.yaml
@@ -291,6 +291,8 @@ HARV:
 	Tooltip:
 		Name: Ore Truck
 		GenericName: Harvester
+	UpdatesPlayerStatistics:
+		AddToArmyValue: false
 	Selectable:
 		Priority: 7
 		DecorationBounds: 42,42
@@ -342,6 +344,8 @@ MCV:
 		Cost: 2000
 	Tooltip:
 		Name: Mobile Construction Vehicle
+	UpdatesPlayerStatistics:
+		AddToArmyValue: false
 	Selectable:
 		Priority: 4
 		DecorationBounds: 42,42
@@ -504,6 +508,8 @@ TRUK:
 		Cost: 500
 	Tooltip:
 		Name: Supply Truck
+	UpdatesPlayerStatistics:
+		AddToArmyValue: false
 	Selectable:
 		Priority: 6
 	Health:
