--- a/mods/cnc/rules/defaults.yaml
+++ b/mods/cnc/rules/defaults.yaml
@@ -242,6 +242,8 @@
 ^Vehicle:
 	Inherits@1: ^ExistsInWorld
 	Inherits@3: ^SpriteActor
+	UpdatesPlayerStatistics:
+		AddToArmyValue: true
 	Huntable:
 	OwnerLostAction:
 		Action: Kill
@@ -290,6 +292,8 @@
 ^Helicopter:
 	Inherits@1: ^ExistsInWorld
 	Inherits@3: ^SpriteActor
+	UpdatesPlayerStatistics:
+		AddToArmyValue: true
 	Huntable:
 	OwnerLostAction:
 		Action: Kill
@@ -455,6 +459,8 @@
 
 ^Soldier:
 	Inherits: ^Infantry
+	UpdatesPlayerStatistics:
+		AddToArmyValue: true
 	MustBeDestroyed:
 	Tooltip:
 		GenericName: Soldier
@@ -622,6 +628,8 @@
 ^Plane:
 	Inherits@1: ^ExistsInWorld
 	Inherits@2: ^SpriteActor
+	UpdatesPlayerStatistics:
+		AddToArmyValue: true
 	Huntable:
 	OwnerLostAction:
 		Action: Kill
@@ -646,6 +654,8 @@
 ^Ship:
 	Inherits@1: ^ExistsInWorld
 	Inherits@3: ^SpriteActor
+	UpdatesPlayerStatistics:
+		AddToArmyValue: true
 	Huntable:
 	OwnerLostAction:
 		Action: Kill
