--- a/mods/d2k/rules/vehicles.yaml
+++ b/mods/d2k/rules/vehicles.yaml
@@ -11,6 +11,8 @@ mcv:
 		Cost: 2000
 	Tooltip:
 		Name: Mobile Construction Vehicle
+	UpdatesPlayerStatistics:
+		AddToArmyValue: false
 	Selectable:
 		Class: mcv
 		Priority: 3
@@ -61,6 +63,8 @@ harvester:
 		Cost: 1200
 	Tooltip:
 		Name: Spice Harvester
+	UpdatesPlayerStatistics:
+		AddToArmyValue: false
 	Selectable:
 		Class: harvester
 		Priority: 7
