--- a/mods/ts/rules/shared-vehicles.yaml
+++ b/mods/ts/rules/shared-vehicles.yaml
@@ -10,6 +10,8 @@ MCV:
 		Cost: 2500
 	Tooltip:
 		Name: Mobile Construction Vehicle
+	UpdatesPlayerStatistics:
+		AddToArmyValue: false
 	Selectable:
 		Priority: 3
 		DecorationBounds: 42,42
@@ -47,6 +49,8 @@ HARV:
 		Cost: 1400
 	Tooltip:
 		Name: Harvester
+	UpdatesPlayerStatistics:
+		AddToArmyValue: false
 	Buildable:
 		Queue: Vehicle
 		BuildPaletteOrder: 10
